tester/testsuite/bad/array01.jl

int main() {
  int[1] a;
  return 0;
}
